# Xuanmu-Bugbounty-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
src/xuanmu_bb/: __init__.py  client.py  server.py  utils.py
src/xuanmu_bb/auth/: graphql.py  jwt_tool.py
src/xuanmu_bb/data/: __init__.py  dicts.py  fingerprints.py  fingerprints.yaml  fingerprints_enhanced.py  fingerprints_hub.py  patterns.py  payloads.py  waf.py
src/xuanmu_bb/extract/: headers.py  js_analyze.py  param_discover.py  secret_detect.py  url_extract.py
src/xuanmu_bb/recon/: dir_scan.py  fingerprint.py  ping.py  port_scan.py  subdomain.py
src/xuanmu_bb/tools/: cloud_check.py  fingerprint_importer.py  idor.py  oob.py  payload_factory.py  report.py  request.py  session.py  summary.py  waf_check.py
src/xuanmu_bb/vuln/: cmdi.py  cors.py  csrf.py  file_upload.py  host_inject.py  lfi.py  nosqli.py  open_redirect.py  race.py  sqli.py  ssrf.py  ssti.py  takeover.py  xss.py  xxe.py
tests/: test_core.py
tools/: fix_readme2.py
